# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

ohos_prebuilt_shared_library("mindspore_demo") {
  source = "//drivers/peripheral/nnrt/mindspore/mindspore/libmindspore-lite.huawei.so"

  install_images = [chipset_base_dir]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_nnrt"
}

ohos_shared_library("libnnrt_device_service_1.0") {
  include_dirs = [
    "//drivers/peripheral/nnrt/hdi_cpu_service/include",
    "//drivers/peripheral/nnrt/mindspore",
    "//third_party/flatbuffers/include",
    "//commonlibrary/c_utils/base/include"
  ]
  sources = [
    "src/nnrt_device_service.cpp",
    "src/prepared_model_service.cpp",
    "src/node_registry.cpp",
    "src/node_functions.cpp",
    "src/shared_buffer_parser.cpp",
    "src/validation.cpp"
  ]

  deps = [
    "//drivers/interface/nnrt/v1_0:nnrt_idl_headers",
    "//drivers/interface/nnrt/v1_0:libnnrt_stub_1.0",
    ":mindspore_demo"
  ]

  external_deps = [
    "hdf_core:libhdf_utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "c_utils:utils"
  ]

  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_nnrt"
}

ohos_shared_library("libnnrt_driver") {
  include_dirs = []
  sources = [
    "src/nnrt_device_driver.cpp"
  ]
  deps = [
    "//drivers/peripheral/nnrt/hdi_cpu_service:libnnrt_device_service_1.0",
    "//drivers/interface/nnrt/v1_0:libnnrt_stub_1.0"
  ]

  external_deps = [
    "hdf_core:libhdf_host",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libhdf_utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "c_utils:utils",
    "hdf_core:libhdi"
  ]

  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_nnrt"
}

group("hdf_nnrt_service") {
  deps = [
    ":mindspore_demo",
    ":libnnrt_driver",
    ":libnnrt_device_service_1.0",
  ]
}