# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

ohos_prebuilt_shared_library("mindspore_demo") {
  source = "../mindspore/mindspore/libmindspore-lite.so"
  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_nnrt"
}

ohos_shared_library("libnnrt_device_service_2.0") {
  include_dirs = [
    "include",
    "../mindspore",
    "//third_party/flatbuffers/include",
  ]
  sources = [
    "src/nnrt_device_service.cpp",
    "src/node_functions.cpp",
    "src/node_registry.cpp",
    "src/prepared_model_service.cpp",
    "src/shared_buffer_parser.cpp",
    "src/validation.cpp",
  ]

  deps = [ ":mindspore_demo" ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_nnrt:libnnrt_stub_2.0",
    "hdf_core:libhdf_utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_nnrt"
}

ohos_shared_library("libnnrt_driver") {
  include_dirs = []
  sources = [ "src/nnrt_device_driver.cpp" ]
  deps = [ ":libnnrt_device_service_2.0" ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_nnrt:libnnrt_stub_2.0",
    "hdf_core:libhdf_host",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_nnrt"
}

group("hdf_nnrt_service") {
  deps = [
    ":libnnrt_device_service_2.0",
    ":libnnrt_driver",
    ":mindspore_demo",
  ]
}
